--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -5,15 +5,28 @@
 //
 // Add inset shadow on click
 
-.button-shadow(@background; @border) {
+.button-shadow(@background-highlight; @border) {
   &:active,
   &.active,
   .open .dropdown-toggle& {
     background-image: none;
-    background-color: darken(@background, 5%);
-        border-color: darken(@border, 5%);
-    .box-shadow(inset 0 1px 2px fade(@gray-darker, 30%));
-  }  
+  }
+
+  &:not(:disabled):not(.is-disabled) {
+    &:focus,
+    &.is-focused {
+      background-color: @background-highlight;
+    }
+
+    &:hover {
+      background-color:@background-highlight;
+    }
+
+    &.is-selected,
+    &:active {
+      background-color: @border;
+    }
+  }
 }
 
 
