--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -6,27 +6,20 @@
     .btn();
 }
 
-.lf-btn-default {
-    .lf-button-variant(@btn-default-color; @btn-default-bg; @btn-default-border; 15%);
-}
-.lf-btn-primary {
-    .lf-button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; 30%);
+.lf-btn-default, .lf-btn-primary, .lf-btn-info {
+    .lf-button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; @btn-primary-highlight);
 }
 // Warning appears as orange
 .lf-btn-warning {
-    .lf-button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border; 30%);
+    .lf-button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border; @btn-warning-highlight);
 }
 // Danger and error appear as red
 .lf-btn-danger {
-  .lf-button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border; 30%);
+  .lf-button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border; @btn-danger-highlight);
 }
 // Success appears as green
 .lf-btn-success {
-  .lf-button-variant(@btn-success-color; @btn-success-bg; @btn-success-border; 30%);
-}
-// Info appears as blue-green
-.lf-btn-info {
-  .lf-button-variant(@btn-info-color; @btn-info-bg; @btn-info-border; 30%);
+  .lf-button-variant(@btn-success-color; @btn-success-bg; @btn-success-border; @btn-success-highlight);
 }
 
 /**
