--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -5,8 +5,10 @@
 // -------------------------
 //
 
-.lf-button-variant(@color; @background; @border; @shadow-percent) {
+.lf-button-variant(@color; @background; @border; @highlight) {
   color: @color;
+  text-shadow: 0 -1px 0 @border;
+
   background-color: @background;
   border-color: @border;
 
@@ -14,17 +16,14 @@
   &:focus,
   .open .dropdown-toggle& {
     color: @color;
-    background-color: @background;
+    background-color: @highlight;
         border-color: @border;
-    .box-shadow(0 1px 2px fade(@lf-gray-darker, @shadow-percent));
   }
   &:active,
   &.active,
   .open .dropdown-toggle& {
     background-image: none;
-    background-color: darken(@background, 5%);
-        border-color: darken(@border, 5%);
-    .box-shadow(inset 0 1px 2px fade(@lf-gray-darker, 30%));
+    background-color: @background;
   }
   &.disabled,
   &[disabled],
