CSS for 2.x Coral.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -545,11 +545,11 @@
 @slat-bg-hover-color:           @gray-lighter;
 @slat-line-height:              18px;
 @slat-font-size:                @font-size-small;
-@slat-font-color:               @gray-dark;
+@slat-font-color:               @coral-color-text;
 @slat-font-hover-color:         @gray-darkest;
 @slat-header-height:            42px;
 @slat-header-font-size:         @font-size-small;
-@slat-header-font-color:        @gray-dark;
+@slat-header-font-color:        @coral-color-text;
 @slat-header-line-height:       18px;
 @slat-title-size:               14px;
 @slat-title-size-lg:            16px;
