CSS for 1.5.x Coral.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -327,9 +327,9 @@
 @btn-info-highlight:             @coral-color-primary-highlight;
 
 @btn-warning-color:              @coral-color-white;
-@btn-warning-bg:                 @button-warning;
-@btn-warning-border:             @button-warning-stroke;
-@btn-warning-highlight:          @button-warning-highlight;
+@btn-warning-bg:                 @coral-color-warning;
+@btn-warning-border:             @coral-color-warning-stroke;
+@btn-warning-highlight:          @coral-color-warning-highlight;
 
 @btn-danger-color:               @coral-color-white;
 @btn-danger-bg:                  @coral-color-error;
