--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -83,6 +83,7 @@
   font-weight: @btn-font-weight;
   background: transparent;
   border-radius: @btn-radius;
+  color: @coral-color-text-secondary;
 
   &:hover,
   &:focus,
