--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -221,6 +221,7 @@
 
 @line-height-base:        1.428571429; // 20/14
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
+@text-color:              @coral-color-text;
 
 
 // Brand colors
