--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -5,10 +5,8 @@
 // -------------------------
 //
 
-.lf-button-variant(@color; @background; @border; @highlight) {
+.lf-button-variant(@color; @background; @border; @shadow-percent) {
   color: @color;
-  text-shadow: 0 -1px 0 @border;
-
   background-color: @background;
   border-color: @border;
 
@@ -16,14 +14,17 @@
   &:focus,
   .open .dropdown-toggle& {
     color: @color;
-    background-color: @highlight;
+    background-color: @background;
         border-color: @border;
+    .box-shadow(0 1px 2px fade(@lf-gray-darker, @shadow-percent));
   }
   &:active,
   &.active,
   .open .dropdown-toggle& {
     background-image: none;
-    background-color: @background;
+    background-color: darken(@background, 5%);
+        border-color: darken(@border, 5%);
+    .box-shadow(inset 0 1px 2px fade(@lf-gray-darker, 30%));
   }
   &.disabled,
   &[disabled],
