--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -7,7 +7,7 @@
 
 .lf-button-variant(@color; @background; @border; @highlight) {
   color: @color;
-  text-shadow: 0 -1px 0 @border;
+  //text-shadow: 0 -1px 0 @border;//Coral, but looks bad in most of our buttons
 
   background-color: @background;
   border-color: @border;
