--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -180,6 +180,12 @@
 @coral-color-success-highlight: @coral-color-green-highlight;
 @coral-color-success-stroke: @coral-color-green-stroke;
 
+// Minimal Button
+@coral-minimalbutton-notification-background-color: rgb(235, 50, 45);
+@coral-minimalbutton-notification-border-color: rgb(30, 30, 30);
+@coral-minimalbutton-notification-text-color: @coral-color-text-active;
+@coral-minimalbutton-line-height: 38px;
+
 @link-subtle-focus-glow-color:       rgb(75, 75, 75);
 @link-subtle-focus-outline-color:    rgb(50, 50, 50);
 
