Add creative-commons and source-link fycons

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -705,6 +705,12 @@
 .fycon-x {
   &:before { content: "\e0af"; }
 }
+.fycon-creative-commons {
+  &:before { content: "\e0e6"}
+}
+.fycon-source-link {
+  &:before { content: "\e0e7"}
+}
 
 // Colored Icons
 .colored {
