--- a/src/styles/dropdowns.less
+++ b/src/styles/dropdowns.less
@@ -86,6 +86,11 @@
   .translate(-50%, 0);
 }
 
+// Copied from Bootstrap
+.dropdown-menu-right {
+  left: auto; // Reset the default from `.dropdown-menu`
+  right: 0;
+}
 
 // Dropdown section headers
 .dropdown-header {
